--- a/.babelrc
+++ b/.babelrc
@@ -4,12 +4,9 @@
       "env",
       {
         "targets": {
-          "node": 6.6
+          "node": "6.6"
         }
       }
     ]
-  ],
-  "plugins": [
-    "add-module-exports"
   ]
 }
